# pyrallelism

./: LICENSE  README.md  environment.yml  meta.yml  pyproject.toml  scorer.py  setup.cfg
pyrallelism/: __init__.py  evaluator.py  pyrallelism.py
pyrallelism/primitives/: __init__.py  evaluation_metric.py
pyrallelism/primitives/assignment/: lsa.py
pyrallelism/primitives/conversion/: __init__.py  base.py  instantiations.py
pyrallelism/primitives/loading/: base.py  instantiations.py  interface.py
pyrallelism/primitives/score/: __init__.py  base.py  instantiations.py
pyrallelism/primitives/size/: base.py  instantiations.py
pyrallelism/utils/: __init__.py  output_format.py
src/: evaluator.py
src/primitives/: evaluation_metric.py  typing.py
src/primitives/conversion/: base.py  instantiations.py
src/primitives/loading/: base.py  instantiations.py  interface.py
src/primitives/score/: base.py  instantiations.py
src/primitives/size/: base.py  instantiations.py
src/pyrallelism/: __init__.py  evaluator.py  pyrallelism.py
src/pyrallelism/primitives/: __init__.py  evaluation_metric.py
src/pyrallelism/primitives/assignment/: __init__.py
src/pyrallelism/primitives/conversion/: base.py  instantiations.py
src/pyrallelism/primitives/loading/: __init__.py  base.py  instantiations.py  interface.py
src/pyrallelism/primitives/score/: base.py  instantiations.py
src/pyrallelism/primitives/size/: __init__.py  base.py  instantiations.py
src/pyrallelism/structures/: __init__.py  confusion_matrix.py
src/pyrallelism/utils/: __init__.py  command_line_helpers.py  help_messages.py  output_format.py
src/structures/: confusion_matrix.py
test/: evaluation_tester.py  loading_tester.py
test/data/: wikipedia_flawed_hyp.tsv  wikipedia_gt.xml  wikipedia_perfect_hyp.tsv
