[project]
name = "pyrallelism"
authors = [{name = "Stephen Bothwell", email = "sbothwel@nd.edu"}]
version = "1.0.9"
description = "Interface and Utilities for Bipartite Parallelism Metrics"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
keywords = ["Metrics", "Evaluation", "Rhetorical Parallelism Detection"]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Utilities"
]
dependencies = ["natsort>=7.1", "numpy>=1.25", "scipy>=1.10"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pyrallelism = "pyrallelism:_use_pyrallelism_cli"
