[metadata]
name = pyrallelism
version = 1.0.0
author = Stephen Bothwell
author_email = sbothwel@nd.edu
description = Interface and Utilities for Bipartite Parallelism Metrics
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Metrics, Evaluation, Rhetorical Parallelism Detection
license = ???   # TODO: what should this be?
classifiers =
    Intended Audience :: Science/Research,
    Intended Audience :: Education,
    Operating System :: OS Independent,
    Programming Language :: Python,
    Programming Language :: Python :: 3.11,
    Topic :: Scientific/Engineering,
    Topic :: Text Processing :: Linguistic,
    Topic :: Text Processing :: Markup :: XML,
    Topic :: Utilities
url = "https://github.com/Mythologos/pyrallelism"

[options]
package_dir = =pyrallelism
packages = find:
python_requires = >=3.11
install_requires = natsort, numpy, scipy

[options.entry_points]
console_scripts =
    pyrallelism = pyrallelism:use_pyrallelism_cli

[options.packages.find]
where = pyrallelism
