[metadata]
name = pyrallelism
version = 1.1.1
author = Stephen Bothwell
author_email = sbothwel@nd.edu
description = Interface and Utilities for Bipartite Parallelism Metrics
url = https://github.com/Mythologos/pyrallelism
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Metrics, Evaluation, Rhetorical Parallelism Detection
license = MIT
classifiers =
    Intended Audience :: Science/Research,
    Intended Audience :: Education,
    License :: OSI Approved :: MIT License,
    Operating System :: OS Independent,
    Programming Language :: Python,
    Programming Language :: Python :: 3.11,
    Topic :: Scientific/Engineering,
    Topic :: Text Processing :: Linguistic,
    Topic :: Text Processing :: Markup :: XML,
    Topic :: Utilities

[options]
package_dir = =src
packages = find:
python_requires = >=3.11
install_requires =
    natsort
    numpy
    scipy

[options.entry_points]
console_scripts =
    pyrallelism = pyrallelism:_use_pyrallelism_cli

[options.packages.find]
where = src
